# libmedia_app

./: .gitignore  CMakeLists.txt  README.md
comm/libmedia/: media.h
src/app/: CMakeLists.txt  main.c
